feat(booking): add lifecycle states, availability API, audit logs, and rate limiting